--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 ijson = "^3.1.4"
 autopep8 = "^1.5.7"
 marisa-trie = "^0.7.6"
+click = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
