--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ authors = ["Harry Peach (Personal Signing Key) <harrypeach1999@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 ijson = "^3.1.4"
-autopep8 = "^1.5.7"
 marisa-trie = "^0.7.6"
 click = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+autopep8 = "^1.5.7"
 pylama = "^7.7.1"
+expects = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
