--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
 	"python.linting.pylamaEnabled": true,
 	"python.linting.enabled": true,
+	"python.formatting.provider": "autopep8",
+	"python.formatting.autopep8Args": [
+		"--max-line-length",
+		"88",
+		"--experimental"
+	]
 }
