--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Harry Peach (Personal Signing Key) <harrypeach1999@gmail.com>"]
 python = "^3.9"
 ijson = "^3.1.4"
 marisa-trie = "^0.7.6"
-click = "^8.0.1"
+typer = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
