--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^5.2"
 autopep8 = "^1.5.7"
 pylama = "^7.7.1"
 expects = "^0.9.0"
+pytest-sugar = "^0.9.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
